feat: stabilize MCP transport and embedding-based RAG retrieval

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,6 @@ langchain>=0.3.0
 langchain-mcp-adapters>=0.1.0
 fastmcp>=2.0.0
 chromadb>=1.0.0
+sentence-transformers>=3.0.1
 google-genai>=1.0.0
 python-dotenv>=1.0.1
