--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,15 @@ API_PORT=8000
 
 # RAG / MCP
 RAG_MCP_ENABLED=true
-RAG_MCP_TRANSPORT=stdio
+RAG_MCP_TRANSPORT=streamable_http
 RAG_MCP_ARGS=-m src.mcp.rag_server
-RAG_MCP_TIMEOUT_SEC=2.0
+RAG_MCP_HOST=127.0.0.1
+RAG_MCP_PORT=8765
+RAG_MCP_PATH=/mcp
+RAG_MCP_AUTOSTART=true
+RAG_MCP_TIMEOUT_SEC=10.0
 RAG_TOP_K=3
+RAG_CHROMA_PATH=data/chroma
+RAG_CHROMA_COLLECTION=sentinelhybrid_manuals_e5_small
+RAG_EMBEDDING_MODEL=intfloat/multilingual-e5-small
+RAG_EMBEDDING_DEVICE=cpu
