--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ requests>=2.31.0
 opencv-python>=4.9.0.80
 numpy>=1.26.0
 pydantic>=2.6.0
+pydantic-settings>=2.2.1
 httpx>=0.27.0
 langchain>=0.3.0
 langchain-mcp-adapters>=0.1.0
